Fixed bug when title in insight covered by buttons

--- a/app/assets/stylesheets/company/_post.scss
+++ b/app/assets/stylesheets/company/_post.scss
@@ -66,6 +66,7 @@ $base-post-preview-margin: 60px;
         color: hsl(135, 50%, 50%);
         font-size: 1.25em;
         font-weight: 600;
+        padding-right: 60px;
 
         > i.fa-star {
           color: hsl(50, 100%, 60%);
